--- a/templates/ranger_rc.conf.j2
+++ b/templates/ranger_rc.conf.j2
@@ -1,3 +1,3 @@
 # {{ ansible_managed }}
 #
-{% if ranger_hidden_files | bool %}set show_hidden true{% endif %}
+{% if base__ranger_hidden_files | bool %}set show_hidden true{% endif %}
